@@ -515,6 +515,7 @@ extern guint im_options;
 #define OPT_IM_ONE_WINDOW		0x00000010
 #define OPT_IM_SIDE_TAB			0x00000020
 #define OPT_IM_BR_TAB			0x00000040
+#define OPT_IM_HIDE_ICONS		0x00000080
 
 extern guint chat_options;
 #define OPT_CHAT_ONE_WINDOW		0x00000001
@@ -730,6 +731,7 @@ extern void tabize();
 extern void chat_tabize();
 extern void update_convo_color();
 extern void update_convo_font();
+extern void set_hide_icons();
 
 /* Functions in toc.c */
 extern void parse_toc_buddy_list(struct gaim_connection *, char *, int);
